Update .pages.yml (via Pages CMS)

--- a/.pages.yml
+++ b/.pages.yml
@@ -13,7 +13,7 @@ content:
         fields:
           - { name: title, label: Title, type: string, required: true }
           - { name: link, label: Link, type: string, required: true }
-          - { name: icon, label: Icon, type: image, required: true,
+          - { name: icon, label: Icon, type: image,
               options: { media: icons, extensions: [svg] } }
 
   - name: projects
@@ -22,12 +22,12 @@ content:
     path: content/projects.json
     fields:
       - { name: title, label: Title, type: string }
-      - name: entries
+      - name: items
         label: Items
         type: object
         list: true
         fields:
-          - { name: image, label: Image, type: image, required: true }
+          - { name: image, label: Image, type: image }
           - { name: title, label: Title, type: string, required: true }
           - { name: body, label: Body, type: rich-text, required: true }
           - { name: link, label: Link, type: string, required: true }
