--- a/.pages.yml
+++ b/.pages.yml
@@ -18,6 +18,7 @@ content:
         fields:
           - { name: title, label: Title, type: string, required: true }
           - { name: link, label: Link, type: string, required: true }
+          - { name: icon, label: Icon, type: image, required: true, options: { media: icons, extensions: [svg] } }
 
   - name: projects
     label: Projects
