--- a/.pages.yml
+++ b/.pages.yml
@@ -23,7 +23,7 @@ content:
             type: image
             required: true
             options:
-              media: images/icons
+              media: images
               extensions: [svg]
 
   - name: projects
