--- a/.pages.yml
+++ b/.pages.yml
@@ -23,6 +23,7 @@ content:
             type: image
             required: true
             options:
+              media: images
               extensions: [svg]
 
   - name: projects
