Update .pages.yml (via Pages CMS)

--- a/.pages.yml
+++ b/.pages.yml
@@ -23,7 +23,7 @@ content:
             type: image
             required: true
             options:
-              media: images
+              media: icons
               extensions: [svg]
 
   - name: projects
