--- a/content/projects.json
+++ b/content/projects.json
@@ -1,10 +1,19 @@
 {
-  "title": "My Projects",
+  "title": {
+    "en": "My Projects",
+    "ru": "Мои проекты"
+  },
   "items": [
     {
       "image": "project1.png",
-      "title": "Portfolio Website",
-      "body": "<p>This is a portfolio project.</p>",
+      "title": {
+        "en": "Portfolio Website",
+        "ru": "Сайт-портфолио"
+      },
+      "body": {
+        "en": "<p>A personal portfolio built with React and Tailwind CSS.</p>",
+        "ru": "<p>Личное портфолио, созданное с помощью React и Tailwind CSS.</p>"
+      },
       "link": "https://example.com/portfolio"
     }
   ]
