Update .pages.yml (via Pages CMS)

--- a/.pages.yml
+++ b/.pages.yml
@@ -34,7 +34,8 @@ content:
             type: image
             required: true
             options:
-              media: vectors
+              media: images/vectors
+              categories: [image]
               extensions: [svg]
 
   - name: projects
