--- a/.pages.yml
+++ b/.pages.yml
@@ -8,8 +8,10 @@ media:
     label: Vectors
     input: images/icons
     output: /images/icons
+    path: images/icons
     extensions: [svg]
     categories: [image]
+    
 content:
   - name: contacts
     label: Contacts
