Update .pages.yml (via Pages CMS)

--- a/.pages.yml
+++ b/.pages.yml
@@ -8,7 +8,7 @@ media:
     label: Vectors
     input: images/icons
     output: /images/icons
-    path: images/icons
+    path: ./images/icons
     extensions: [svg]
     categories: [image]
     
