Update .pages.yml (via Pages CMS)

--- a/.pages.yml
+++ b/.pages.yml
@@ -29,6 +29,7 @@ content:
         list: true
         fields:
           - { name: title, label: Title, type: string, required: true }
+          - { name: name, label: name, type: string, required: true }
           - { name: link, label: Link, type: string, required: true }
           - name: icon
             label: Icon
