Update .pages.yml (via Pages CMS)

--- a/.pages.yml
+++ b/.pages.yml
@@ -17,6 +17,7 @@ content:
     type: file
     path: content/contacts.json
     fields:
+      # Global Title
       - name: title
         label: Title
         type: object
@@ -45,6 +46,7 @@ content:
     type: file
     path: content/projects.json
     fields:
+      # Global Title
       - name: title
         label: Title
         type: object
@@ -70,3 +72,55 @@ content:
               - { name: en, label: English, type: rich-text, required: true }
               - { name: ru, label: Russian, type: rich-text, required: true }
           - { name: link, label: Link, type: string, required: true }
+
+
+  - name: skills
+    label: Skills
+    type: file
+    path: content/skills.json
+    fields:
+      # Global Title
+      - name: title
+        label: Title
+        type: object
+        fields:
+          - { name: en, label: English, type: string, required: true }
+          - { name: ru, label: Russian, type: string, required: true }
+    
+      # Development Section
+      - name: development
+        label: Development
+        type: object
+        fields:
+          - name: title
+            label: Title
+            type: object
+            fields:
+              - { name: en, label: English, type: string, required: true }
+              - { name: ru, label: Russian, type: string, required: true }
+          - name: items
+            label: Items
+            type: object
+            list: true
+            fields:
+              - { name: title, label: Title, type: string, required: true }
+              - { name: icon, label: Icon, type: image, required: true, options: { media: vectors, extensions: [svg] } }
+    
+      # Design Section
+      - name: design
+        label: Design
+        type: object
+        fields:
+          - name: title
+            label: Title
+            type: object
+            fields:
+              - { name: en, label: English, type: string, required: true }
+              - { name: ru, label: Russian, type: string, required: true }
+          - name: items
+            label: Items
+            type: object
+            list: true
+            fields:
+              - { name: title, label: Title, type: string, required: true }
+              - { name: icon, label: Icon, type: image, required: true, options: { media: vectors, extensions: [svg] } }
