Update content/projects.json (via Pages CMS)

--- a/content/projects.json
+++ b/content/projects.json
@@ -50,7 +50,7 @@
         "en": "Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio eaque nobis rem libero necessitatibus esse voluptatum earum reiciendis cumque expedita repellendus doloribus nulla, itaque eveniet quae obcaecati sint debitis placeat.",
         "ru": "Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio eaque nobis rem libero necessitatibus esse voluptatum earum reiciendis cumque expedita repellendus doloribus nulla, itaque eveniet quae obcaecati sint debitis placeat."
       },
-      "link": "https://underwhot.github.io/coral-shop/"
+      "link": "https://artpetrovskyi.github.io/coral-shop/"
     }
   ]
 }
