Update .pages.yml (via Pages CMS)

--- a/.pages.yml
+++ b/.pages.yml
@@ -18,38 +18,55 @@ content:
     path: content/general.json
     fields:
       # About Section
-      - { name: photo, label: Photo, type: image, required: true }
-      - name: body
-        label: Body
+      - name: about
+        label: About
         type: object
         fields:
-          - { name: en, label: English, type: rich-text, required: true }
-          - { name: ru, label: Russian, type: rich-text, required: true }
+          - { name: photo, label: Photo, type: image, required: true }
+          - name: body
+            label: Body
+            type: object
+            fields:
+              - { name: en, label: English, type: rich-text, required: true }
+              - { name: ru, label: Russian, type: rich-text, required: true }
 
       # Contacts Section
-      - name: items
-        label: Items
+      - name: contacts
+        label: Contacts
         type: object
-        list: true
         fields:
-          - { name: title, label: Title, type: string, required: true }
-          - { name: name, label: Name, type: string, required: true }
-          - { name: link, label: Link, type: string, required: true }
-          - name: icon
-            label: Icon
-            type: image
-            required: true
-            options:
-              media: vectors
-              categories: [image]
-              extensions: [svg]
+          - name: items
+            label: Items
+            type: object
+            list: true
+            fields:
+              - { name: title, label: Title, type: string, required: true }
+              - { name: name, label: Name, type: string, required: true }
+              - { name: link, label: Link, type: string, required: true }
+              - name: icon
+                label: Icon
+                type: image
+                required: true
+                options:
+                  media: vectors
+                  categories: [image]
+                  extensions: [svg]
 
       # Skills Section
-          # Development
+      - name: skills
+        label: Skills
+        type: object
+        fields:
           - name: development
             label: Development
             type: object
             fields:
+              - name: title
+                label: Title
+                type: object
+                fields:
+                  - { name: en, label: English, type: string, required: true }
+                  - { name: ru, label: Russian, type: string, required: true }
               - name: items
                 label: Items
                 type: object
@@ -58,7 +75,6 @@ content:
                   - { name: title, label: Title, type: string, required: true }
                   - { name: icon, label: Icon, type: image, required: true, options: { media: vectors, extensions: [svg] } }
 
-          # Design
           - name: design
             label: Design
             type: object
@@ -71,12 +87,17 @@ content:
                   - { name: title, label: Title, type: string, required: true }
                   - { name: icon, label: Icon, type: image, required: true, options: { media: vectors, extensions: [svg] } }
 
-  # Projects Section (unchanged)
   - name: projects
     label: Projects
     type: file
     path: content/projects.json
     fields:
+      - name: title
+        label: Title
+        type: object
+        fields:
+          - { name: en, label: English, type: string, required: true }
+          - { name: ru, label: Russian, type: string, required: true }
       - name: items
         label: Items
         type: object
