--- a/.pages.yml
+++ b/.pages.yml
@@ -36,7 +36,9 @@ content:
         type: object
         list: true
         fields:
+          - { name: title, label: Title, type: string }
           - { name: body, label: Body, type: rich-text }
+          - { name: link-title, label: Link title, type: string }
           - { name: link, label: Link, type: string }
 
       # Contacts Section
